tests/errors/string_assignment_02.f90
program string_assignment_02
    implicit none
    character(10), allocatable :: a
    character(:), allocatable :: b
    a = b
end program string_assignment_02